# onomasticon

./: README.md  main.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: checks.yml
src/onomasticon/: __init__.py  app.py  cli.py
src/onomasticon/core/: __init__.py  appellations.py  documentary.py  entities.py  identifiers.py  local_ids.py  ports.py  properties.py  reconciliation.py  repository.py  statements.py  temporal.py  validation.py
src/onomasticon/documentary/: __init__.py  repository.py
src/onomasticon/profiles/: __init__.py
src/onomasticon/renderers/: __init__.py
src/onomasticon/scanners/: __init__.py
src/onomasticon/sources/: __init__.py  records.py  repository.py
src/onomasticon/workflows/: __init__.py
tests/: test_app.py  test_appellations.py  test_cli.py  test_core_models.py  test_documentary.py  test_documentary_repository.py  test_entities.py  test_ids.py  test_ports.py  test_reconciliation.py  test_repository.py  test_sources.py  test_statements.py
