[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "onomasticon"
version = "0.1.0"
description = "Git-backed scholarly entity repository with a technology-independent canonical core."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Andrew Dunning" },
]
dependencies = [
    "edtf>=5.0.1",
    "langcodes>=3.5.1",
    "language-data>=1.4.0",
    "lxml>=6.0.2",
]


[project.urls]
Repository = "https://github.com/adunning/onomasticon"

[project.scripts]
onomasticon = "onomasticon.cli:main"
ono = "onomasticon.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]

[tool.ty.rules]
all = "error"
